# renderer

./: .gitignore  Cargo.toml
crates/asset_image/: Cargo.toml
crates/asset_image/src/: image.rs  lib.rs
crates/asset_shader_source/: Cargo.toml
crates/asset_shader_source/src/: lib.rs  preprocessor.rs  shader_source.rs
src/: arena.rs  asset_server.rs  camera.rs  color.rs  engine.rs  image.rs  input.rs  lib.rs  light.rs  material.rs  mesh.rs  renderer.rs  scene.rs  shader_source.rs  timestamp.rs  ui.rs  vertex.rs  visual_server.rs
src/asset_server/: gltf.rs  shader_source.rs
src/renderer/: backend.rs  mod.rs  pipeline.rs  pipeline2d.rs  pipeline3d.rs  step.rs  vertex.rs  visual_server.rs
src/renderer/pipeline2d/: glyph_instance.rs  uibox_instance.rs
src/renderer/shaders/: fullscreen_texture.wgsl  render_light.wgsl  render_mesh.wgsl  render_shadow_map.wgsl  shader.wgsl  show_texture.wgsl  text.wgsl  uibox.wgsl
src/shaders/: shader.wgsl
src/ui/: helpers.rs  mod.rs
src/visual_server/: renderer.rs
src/visual_server/shaders/: shader.wgsl
