[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Graphics API
#wgpu = "0.17"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }

# Math types
glam = "0.24"

# Windowing
#winit = "0.28"
winit = "0.29"

# Loading assets
gltf = "1.1"
asset_image = { path = "crates/asset_image" }
asset_shader_source = { path = "crates/asset_shader_source" }


# For WGPU logging
env_logger = "0.10"
log = "0.4"

# Transmute data safely to upload to GPU
bytemuck =  { version = "1.13", features = [ "derive" ] }

# Ignore async
pollster = "0.3"


# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3